Correct Vim modeline

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -9,4 +9,5 @@
   @Model.Message
 </p>
 
-<!-- vim: sw=2 ts=2 et: set ++fileformat=dos ft=html -->
+<!-- vim:sw=2:ts=2:et:fileformat=dos:ft=html
+-->
