--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -1,13 +1,36 @@
 @page
-@using RazorPagesIntro.Pages
-@model Index
+@model RazorPagesContacts.Pages.Index
+@addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
 <!-- Inspired from https://docs.microsoft.com/en-us/aspnet/core/razor-pages/?view=aspnetcore-2.1&tabs=netcore-cli -->
 
-<h2>Separate page model</h2>
-<p>
-  @Model.Message
-</p>
+<h1>Contacts</h1>
+<form method="post">
+    <table class="table">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach (var contact in Model.Customers)
+            {
+                <tr>
+                    <td>@contact.Id</td>
+                    <td>@contact.Name</td>
+                    <td>
+                        <a asp-page="./Edit" asp-route-id="@contact.Id">edit</a>
+                        <button type="submit" asp-page-handler="delete"
+                                asp-route-id="@contact.Id">delete</button>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
+
+    <a asp-page="./Create">Create</a>
+</form>
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos:ft=html
 -->
