--- a/Pages/Create.cshtml
+++ b/Pages/Create.cshtml
@@ -1,8 +1,8 @@
 @page
-@model RazorPagesContacts.Pages.CreateModel
+@model RazorPagesContacts.Pages.Create
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
-<!-- // Inspired from https://docs.microsoft.com/en-us/aspnet/core/razor-pages/?view=aspnetcore-2.1&tabs=netcore-cli  -->
+<!-- Inspired from https://docs.microsoft.com/en-us/aspnet/core/razor-pages/?view=aspnetcore-2.1&tabs=netcore-cli  -->
 
 <html>
   <body>
@@ -17,5 +17,5 @@
   </body>
 </html>
 
-<!-- vim:sw=2:ts=2:et:fileformat=dos:ft=html
+<!-- vim:sw=2:ts=2:et:fileformat=dos
 -->
