--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -32,5 +32,5 @@
     <a asp-page="./Create">Create</a>
 </form>
 
-<!-- vim:sw=2:ts=2:et:fileformat=dos:ft=html
+<!-- vim:sw=2:ts=2:et:fileformat=dos
 -->
