--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,6 +4,11 @@
 <!-- Inspired from https://docs.microsoft.com/en-us/aspnet/core/razor-pages/?view=aspnetcore-2.1&tabs=netcore-cli -->
 
 <h1>Contacts</h1>
+@if (!String.IsNullOrEmpty(Model.Message))
+    {
+    <h3>Msg: @Model.Message</h3>
+    }
+
 <form method="post">
     <table class="table">
         <thead>
