--- a/Pages/Create.cshtml
+++ b/Pages/Create.cshtml
@@ -9,7 +9,9 @@
   <div asp-validation-summary="All"></div>
   <form method="POST">
     <div>Name: <input asp-for="Customer.Name" /></div>
-    <input type="submit" />
+    <input type="submit" value="Default" />
+    <input type="submit" asp-page-handler="JoinList" value="Join" />
+    <input type="submit" asp-page-handler="JoinListUC" value="JOIN UC" />
   </form>
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
