--- a/Pages/shared/_Layout.cshtml
+++ b/Pages/shared/_Layout.cshtml
@@ -7,7 +7,9 @@
   <body>
     <!-- <a asp&#45;page="/Index">Home</a> -->
     @RenderBody()
-    <!-- <a asp&#45;page="/Customers/Create">Create</a> <br /> -->
+    <br />
+    <a asp-page="/Create">Create</a>
+    <br />
   </body>
 </html>
 
