Create Article and Customer entities

--- a/Pages/Edit.cshtml
+++ b/Pages/Edit.cshtml
@@ -17,10 +17,10 @@
   <div asp-validation-summary="All"></div>
   <input asp-for="Customer.Id" type="hidden" />
   <div>
-    <label asp-for="Customer.Name"></label>
+    <label asp-for="Customer.Lastname"></label>
     <div>
-      <input asp-for="Customer.Name" />
-      <span asp-validation-for="Customer.Name" ></span>
+      <input asp-for="Customer.Lastname" />
+      <span asp-validation-for="Customer.Lastname" ></span>
     </div>
   </div>
 
