--- a/Pages/Create.cshtml
+++ b/Pages/Create.cshtml
@@ -8,7 +8,8 @@
   </p>
   <div asp-validation-summary="All"></div>
   <form method="POST">
-    <div>Name: <input asp-for="Customer.Name" /></div>
+    <div>LastName: <input asp-for="Customer.Lastname" /></div>
+    <div>Address: <input asp-for="Customer.Address" /></div>
     <input type="submit" value="Default" />
     <input type="submit" asp-page-handler="JoinList" value="Join" />
     <input type="submit" asp-page-handler="JoinListUC" value="JOIN UC" />
