--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -22,7 +22,7 @@
             {
                 <tr>
                     <td>@contact.Id</td>
-                    <td>@contact.Name</td>
+                    <td>@contact.Lastname</td>
                     <td>
                         <a asp-page="./Edit" asp-route-id="@contact.Id">edit</a>
                         <button type="submit" asp-page-handler="delete"
