Create AbstractEntity that all other Entities inherits + add Create and Udpdate time

--- a/Pages/Edit.cshtml
+++ b/Pages/Edit.cshtml
@@ -22,6 +22,10 @@
       <input asp-for="Customer.Lastname" />
       <span asp-validation-for="Customer.Lastname" ></span>
     </div>
+    <div>
+      <input asp-for="Customer.Address" />
+      <span asp-validation-for="Customer.Address" ></span>
+    </div>
   </div>
 
   <div>
