--- a/Pages/Customer/_Layout.cshtml
+++ b/Pages/Customer/_Layout.cshtml
@@ -8,7 +8,7 @@
     <!-- <a asp&#45;page="/Index">Home</a> -->
     @RenderBody()
     <br />
-    <a asp-page="/Create">Create</a>
+    <a asp-page="./Create">Create</a>
     <br />
   </body>
 </html>
