--- a/Pages/Customer/Create.cshtml
+++ b/Pages/Customer/Create.cshtml
@@ -1,5 +1,5 @@
 @page
-@model RazorPagesContacts.Pages.Create
+@model Videotheque.Pages.CustomerPage.Create
 
 <!-- Inspired from https://docs.microsoft.com/en-us/aspnet/core/razor-pages/?view=aspnetcore-2.1&tabs=netcore-cli  -->
 
