--- a/Pages/Customer/Edit.cshtml
+++ b/Pages/Customer/Edit.cshtml
@@ -1,5 +1,5 @@
 @page "{id:int}"
-@model RazorPagesContacts.Pages.Edit
+@model Videotheque.Pages.CustomerPage.Edit
 
 <!-- Inspired from https://docs.microsoft.com/en-us/aspnet/core/razor-pages/?view=aspnetcore-2.1&tabs=netcore-cli  -->
 
