--- a/Pages/Customer/ShowAll.cshtml
+++ b/Pages/Customer/ShowAll.cshtml
@@ -1,5 +1,5 @@
 @page
-@model RazorPagesContacts.Pages.ShowAll
+@model Videotheque.Pages.CustomerPage.ShowAll
 
 <!-- Inspired from https://docs.microsoft.com/en-us/aspnet/core/razor-pages/?view=aspnetcore-2.1&tabs=netcore-cli -->
 
