--- a/Pages/Customer/_ViewImports.cshtml
+++ b/Pages/Customer/_ViewImports.cshtml
@@ -1,2 +1,2 @@
-@namespace RazorPagesContacts.Pages
+@namespace Videotheque.Pages.CustomerPage
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
