--- a/Pages/Customer/ShowAll.cshtml
+++ b/Pages/Customer/ShowAll.cshtml
@@ -18,7 +18,7 @@
       </tr>
     </thead>
     <tbody>
-      @foreach (var contact in Model.Customers)
+      @foreach (var contact in Model.AbstractEntities)
       {
       <tr>
         <td>@contact.Id</td>
