--- a/Pages/Customer/Create.cshtml
+++ b/Pages/Customer/Create.cshtml
@@ -8,8 +8,8 @@
   </p>
   <div asp-validation-summary="All"></div>
   <form method="POST">
-    <div>LastName: <input asp-for="Customer.Lastname" /></div>
-    <div>Address: <input asp-for="Customer.Address" /></div>
+    <div>LastName: <input asp-for="AbstractEntity.Lastname" /></div>
+    <div>Address: <input asp-for="AbstractEntity.Address" /></div>
     <input type="submit" value="Default" />
     <input type="submit" asp-page-handler="JoinList" value="Join" />
     <input type="submit" asp-page-handler="JoinListUC" value="JOIN UC" />
