--- a/Pages/Customer/ShowAll.cshtml
+++ b/Pages/Customer/ShowAll.cshtml
@@ -1,6 +1,10 @@
 @page
 @model Videotheque.Pages.CustomerPage.ShowAll
 
+@{
+  Layout = "_Layout";
+}
+
 <!-- Inspired from https://docs.microsoft.com/en-us/aspnet/core/razor-pages/?view=aspnetcore-2.1&tabs=netcore-cli -->
 
 <h1>Contacts</h1>
