Factorization of ShowAll.cshtml thanks `Layout` and `Partial View` (commit very hard, lot of search, but simple solution)

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -3,6 +3,7 @@
 <!-- Inspired from https://docs.microsoft.com/en-us/aspnet/core/razor-pages/?view=aspnetcore-2.1&tabs=netcore-cli -->
 
 <h1>Welcome !</h1>
-<a href="./Customer/ShowAll">Customer</a>
+<a asp-page="./Customer/ShowAll">Customer</a>
+
 <!-- vim:sw=2:ts=2:et:fileformat=dos
 -->
