--- a/Pages/Customer/Create.cshtml
+++ b/Pages/Customer/Create.cshtml
@@ -1,9 +1,10 @@
 @page
 @model Videotheque.Pages.CustomerPage.Create
 
-@{
-  Layout = "_Layout";
-}
+@** @{
+ *   Layout = "_Layout";
+ *  }
+ *@
 
 <!-- Inspired from https://docs.microsoft.com/en-us/aspnet/core/razor-pages/?view=aspnetcore-2.1&tabs=netcore-cli  -->
 
