Add Article/ShowAll (very factorized and easy to create thanks the last commit)

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -3,7 +3,10 @@
 <!-- Inspired from https://docs.microsoft.com/en-us/aspnet/core/razor-pages/?view=aspnetcore-2.1&tabs=netcore-cli -->
 
 <h1>Welcome !</h1>
-<a asp-page="./Customer/ShowAll">Customer</a>
+<a asp-page="./Customer/ShowAll">Customers</a>
+<br />
+<br />
+<a asp-page="./Article/ShowAll">Articles</a>
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
 -->
