--- a/Pages/Layout/_Create.cshtml
+++ b/Pages/Layout/_Create.cshtml
@@ -5,7 +5,7 @@
 
 <!-- Inspired from https://docs.microsoft.com/en-us/aspnet/core/razor-pages/?view=aspnetcore-2.1&tabs=netcore-cli  -->
 
-<h1> Create a @RenderSection("h1", required: true) </h1>
+<h1> Create @RenderSection("h1", required: true) </h1>
 
 <div asp-validation-summary="All"></div>
 <form method="POST">
