Add Edit for Article (very well factorized)

--- a/Pages/Article/ShowAll.cshtml
+++ b/Pages/Article/ShowAll.cshtml
@@ -11,6 +11,10 @@
 
 @section Thead {
   <th>Barcode</th>
+  <th>Conservation Disc</th>
+  <th>Conservation Box</th>
+  <th>Is lost</th>
+  <th>Count Borrowing</th>
 }
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
