--- a/Pages/Customer/Edit.cshtml
+++ b/Pages/Customer/Edit.cshtml
@@ -12,8 +12,9 @@
     <input asp-for="AbstractEntity.Lastname" />
     <span asp-validation-for="AbstractEntity.Lastname" ></span>
   </div>
+  <label asp-for="AbstractEntity.Address" class="required" ></label>
   <div>
-    <input asp-for="AbstractEntity.Address" />
+    <input asp-for="AbstractEntity.Address" class="required" />
     <span asp-validation-for="AbstractEntity.Address" ></span>
   </div>
 }
