--- a/Pages/Customer/ShowAll.cshtml
+++ b/Pages/Customer/ShowAll.cshtml
@@ -10,7 +10,12 @@
 }
 
 @section Thead {
-  <th>Name</th>
+    <th> Firstname  </th>
+    <th> Lastname   </th>
+    <th> Society    </th>
+    <th> Address    </th>
+    <th> Phone      </th>
+    <th> Email      </th>
 }
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
