--- a/Pages/Customer/Create.cshtml
+++ b/Pages/Customer/Create.cshtml
@@ -2,16 +2,15 @@
 @model Videotheque.Pages.CustomerPage.Create
 
 @{
-  Layout = "../Layout/_Create.cshtml";
+  Layout = "../Layout/_CreateOrEdit.cshtml";
 }
 
 @section h1 {
-  <span>a Customer</span>
+  <span>Create a Customer</span>
 }
 
 @section Inputs {
-  <div>LastName: <input asp-for="AbstractEntity.Lastname" /></div>
-  <div>Address: <input asp-for="AbstractEntity.Address" /></div>
+  @await Html.PartialAsync("_FormPartialView", Model.AbstractEntity )
   <input type="submit" asp-page-handler="JoinList" value="Join" />
   <input type="submit" asp-page-handler="JoinListUC" value="JOIN UC" />
 }
