--- a/Pages/Customer/Edit.cshtml
+++ b/Pages/Customer/Edit.cshtml
@@ -2,21 +2,15 @@
 @model Videotheque.Pages.CustomerPage.Edit
 
 @{
-  Layout = "../Layout/_Edit.cshtml";
+  Layout = "../Layout/_CreateOrEdit.cshtml";
+}
+
+@section h1 {
+  <span>Edit a Customer</span>
 }
 
 @section Inputs {
-  <input asp-for="AbstractEntity.Id" type="hidden" />
-  <label asp-for="AbstractEntity.Lastname"></label>
-  <div>
-    <input asp-for="AbstractEntity.Lastname" />
-    <span asp-validation-for="AbstractEntity.Lastname" ></span>
-  </div>
-  <label asp-for="AbstractEntity.Address" class="required" ></label>
-  <div>
-    <input asp-for="AbstractEntity.Address" class="required" />
-    <span asp-validation-for="AbstractEntity.Address" ></span>
-  </div>
+  @await Html.PartialAsync("_FormPartialView", Model.AbstractEntity )
 }
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
