Improve <head> content

--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -2,6 +2,10 @@
 
 <!-- Inspired from https://docs.microsoft.com/en-us/aspnet/core/razor-pages/?view=aspnetcore-2.1&tabs=netcore-cli -->
 
+@{
+  ViewData["Title"] = "Home";
+}
+
 <h1>Welcome !</h1>
 <a asp-page="./Customer/ShowAll">Customers</a>
 <br />
