--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -1,7 +1,27 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Razor Pages Sample</title>
+
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width" />
+
+    <!-- https://commons.wikimedia.org/wiki/File:Video-film.svg -->
+    <link rel="icon" href="/images/Video-film.svg" />
+
+    <link rel="schema.DC" href="http://purl.org/dc/elements/1.1/" />
+    <meta name="DC.Title" content="Public Library" />
+    <meta name="DC.Creator" content="https://github.com/JulioJu" />
+    <!-- <meta name="DC.Subject" lang="en&#45;GB" content="" /> -->
+    <!-- <meta name="DC.Description" lang="en&#45;GB" content="" /> -->
+    <!-- <meta name="DC.Publisher" content=" " /> -->
+    <meta name="DC.Date.created" scheme="W3CDTF" content="201810" />
+    <!-- <meta name="DC.Date.modified" scheme="W3CDTF" content="20160228" /> -->
+    <meta name="DC.Language" scheme="RFC3066" content="en-GB" />
+    <meta name="DC.Rights" content="MIT" />
+
+    <title>Video Library | @ViewData["Title"]</title>
+
+    <!-- <link rel="stylesheet" href="./style/index.css" /> -->
   </head>
   <body>
 
