Pages Details and Delete created

--- a/Pages/Customer/Create.cshtml
+++ b/Pages/Customer/Create.cshtml
@@ -4,10 +4,7 @@
 @{
   Layout = "../Layout/_CreateOrEdit.cshtml";
   ViewData["Title"] = "Customer Create";
-}
-
-@section h1 {
-  <span>Create a Customer</span>
+  ViewData["h1"] = "Create a Customer";
 }
 
 @section Inputs {
