--- a/Pages/Customer/ShowAll.cshtml
+++ b/Pages/Customer/ShowAll.cshtml
@@ -3,15 +3,8 @@
 
 @{
   Layout = "../Layout/_ShowAll.cshtml";
-    ViewData["Title"] = "Customers";
-
-}
-
-@section h1 {
-  <span>
-    Customers
-    <a asp-page="Create">Create New</a>
-  </span>
+  ViewData["Title"] = "Customer Create";
+  ViewData["h1"] = "List of customers";
 }
 
 @section Thead {
