--- a/Pages/_Layout.cshtml
+++ b/Pages/_Layout.cshtml
@@ -24,7 +24,8 @@
     <!-- <link rel="stylesheet" href="./style/index.css" /> -->
   </head>
   <body>
-
+    <h1> @ViewData["h1"] </h1>
+    <hr />
     @RenderBody()
   </body>
 </html>
