--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -4,9 +4,9 @@
 
 @{
   ViewData["Title"] = "Home";
+  ViewData["h1"] = "Welcome!";
 }
 
-<h1>Welcome !</h1>
 <a asp-page="./Customer/ShowAll">Customers</a>
 <br />
 <br />
