Improve factorization between Delete and Details

--- a/Pages/Customer/_DetailsPartialView.cshtml
+++ b/Pages/Customer/_DetailsPartialView.cshtml
@@ -1,60 +1,62 @@
-@model Videotheque.Pages.CustomerPage.DetailsOrDelete
-  <dl class="row">
-    <dt class="col-sm-2">
-      @Html.DisplayNameFor(model => model.AbstractEntity.Id)
-    </dt>
-    <dd class="col-sm-10">
-      @Html.DisplayFor(model => model.AbstractEntity.Id)
-    </dd>
-    <dt class="col-sm-2">
-      @Html.DisplayNameFor(model => model.AbstractEntity.Firstname)
-    </dt>
-    <dd class="col-sm-10">
-      @Html.DisplayFor(model => model.AbstractEntity.Firstname)
-    </dd>
-    <dt class="col-sm-2">
-      @Html.DisplayNameFor(model => model.AbstractEntity.Lastname)
-    </dt>
-    <dd class="col-sm-10">
-      @Html.DisplayFor(model => model.AbstractEntity.Lastname)
-    </dd>
-    <dt class="col-sm-2">
-      @Html.DisplayNameFor(model => model.AbstractEntity.Society)
-    </dt>
-    <dd class="col-sm-10">
-      @Html.DisplayFor(model => model.AbstractEntity.Society)
-    </dd>
-    <dt class="col-sm-2">
-      @Html.DisplayNameFor(model => model.AbstractEntity.Address)
-    </dt>
-    <dd class="col-sm-10">
-      @Html.DisplayFor(model => model.AbstractEntity.Address)
-    </dd>
-    <dt class="col-sm-2">
-      @Html.DisplayNameFor(model => model.AbstractEntity.Phone)
-    </dt>
-    <dd class="col-sm-10">
-      @Html.DisplayFor(model => model.AbstractEntity.Phone)
-    </dd>
-    <dt class="col-sm-2">
-      @Html.DisplayNameFor(model => model.AbstractEntity.Email)
-    </dt>
-    <dd class="col-sm-10">
-      @Html.DisplayFor(model => model.AbstractEntity.Email)
-    </dd>
-    <dt class="col-sm-2">
-      @Html.DisplayNameFor(model => model.AbstractEntity.CreatedDate)
-    </dt>
-    <dd class="col-sm-10">
-      @Html.DisplayFor(model => model.AbstractEntity.CreatedDate)
-    </dd>
-    <dt class="col-sm-2">
-      @Html.DisplayNameFor(model => model.AbstractEntity.UpdatedDate)
-    </dt>
-    <dd class="col-sm-10">
-      @Html.DisplayFor(model => model.AbstractEntity.UpdatedDate)
-    </dd>
-  </dl>
+@using Videotheque.Data
+@model Customer
+
+<dl class="row">
+  <dt class="col-sm-2">
+    @Html.DisplayNameFor(model => model.Id)
+  </dt>
+  <dd class="col-sm-10">
+    @Html.DisplayFor(model => model.Id)
+  </dd>
+  <dt class="col-sm-2">
+    @Html.DisplayNameFor(model => model.Firstname)
+  </dt>
+  <dd class="col-sm-10">
+    @Html.DisplayFor(model => model.Firstname)
+  </dd>
+  <dt class="col-sm-2">
+    @Html.DisplayNameFor(model => model.Lastname)
+  </dt>
+  <dd class="col-sm-10">
+    @Html.DisplayFor(model => model.Lastname)
+  </dd>
+  <dt class="col-sm-2">
+    @Html.DisplayNameFor(model => model.Society)
+  </dt>
+  <dd class="col-sm-10">
+    @Html.DisplayFor(model => model.Society)
+  </dd>
+  <dt class="col-sm-2">
+    @Html.DisplayNameFor(model => model.Address)
+  </dt>
+  <dd class="col-sm-10">
+    @Html.DisplayFor(model => model.Address)
+  </dd>
+  <dt class="col-sm-2">
+    @Html.DisplayNameFor(model => model.Phone)
+  </dt>
+  <dd class="col-sm-10">
+    @Html.DisplayFor(model => model.Phone)
+  </dd>
+  <dt class="col-sm-2">
+    @Html.DisplayNameFor(model => model.Email)
+  </dt>
+  <dd class="col-sm-10">
+    @Html.DisplayFor(model => model.Email)
+  </dd>
+  <dt class="col-sm-2">
+    @Html.DisplayNameFor(model => model.CreatedDate)
+  </dt>
+  <dd class="col-sm-10">
+    @Html.DisplayFor(model => model.CreatedDate)
+  </dd>
+  <dt class="col-sm-2">
+    @Html.DisplayNameFor(model => model.UpdatedDate)
+  </dt>
+  <dd class="col-sm-10">
+    @Html.DisplayFor(model => model.UpdatedDate)
+  </dd>
+</dl>
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
 -->
