--- a/Pages/Customer/Details.cshtml
+++ b/Pages/Customer/Details.cshtml
@@ -1,5 +1,5 @@
 @page "{id:int}"
-@model Videotheque.Pages.CustomerPage.DetailsOrDelete
+@model Videotheque.Pages.CustomerPage.Details
 
 @{
   Layout = "../Layout/_Details.cshtml";
@@ -8,7 +8,7 @@
 }
 
 @section Details {
-  @await Html.PartialAsync("_DetailsPartialView")
+  @await Html.PartialAsync("_DetailsPartialView", Model.AbstractEntity)
 }
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
