--- a/Pages/Layout/_Details.cshtml
+++ b/Pages/Layout/_Details.cshtml
@@ -2,6 +2,7 @@
   Layout = "./_Layout.cshtml";
 }
 
+@RenderSection("h2", required: false)
 
 <div>
   @RenderSection("Details", required: true)
@@ -10,6 +11,8 @@
     <a asp-page="./Edit" asp-route-id="@Model.AbstractEntity.Id">Edit</a> |
     <a asp-page="./ShowAll">Back to List</a>
 </div>
+
+@RenderSection("DeleteButton", required: false)
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
 -->
