--- a/Pages/Layout/_Details.cshtml
+++ b/Pages/Layout/_Details.cshtml
@@ -5,7 +5,32 @@
 @RenderSection("h2", required: false)
 
 <div>
-  @RenderSection("Details", required: true)
+  <dl class="row">
+
+    <dt class="col-sm-2">
+      Id
+    </dt>
+    <dd class="col-sm-10">
+      @Model.AbstractEntity.Id
+    </dd>
+
+    @RenderSection("Details", required: true)
+
+    <dt class="col-sm-2">
+      Created Date
+    </dt>
+    <dd class="col-sm-10">
+      @Model.AbstractEntity.CreatedDate
+    </dd>
+
+    <dt class="col-sm-2">
+      Updated Date
+    </dt>
+    <dd class="col-sm-10">
+      @Model.AbstractEntity.UpdatedDate
+    </dd>
+
+  </dl>
 </div>
 <div>
     <a asp-page="./Edit" asp-route-id="@Model.AbstractEntity.Id">Edit</a> |
