In Article improve one-to-many relationship with Customer

--- a/Pages/Article/ShowAll.cshtml
+++ b/Pages/Article/ShowAll.cshtml
@@ -32,6 +32,9 @@
   <th>
     @Html.DisplayNameFor(model => model.AbstractEntities[0].ReturnDate)
   </th>
+  <th>
+    @Html.DisplayNameFor(model => model.AbstractEntities[0].BorrowerId)
+  </th>
 }
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
