--- a/Pages/Article/_ShowAllTbody.cshtml
+++ b/Pages/Article/_ShowAllTbody.cshtml
@@ -28,6 +28,9 @@
 <td>
   @Html.DisplayFor(modelItem => item.ReturnDate)
 </td>
+<td>
+  @Html.DisplayFor(modelItem => item.BorrowerId)
+</td>
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
 -->
