--- a/Pages/Article/_DetailsPartialView.cshtml
+++ b/Pages/Article/_DetailsPartialView.cshtml
@@ -37,6 +37,29 @@
 <dd class="col-sm-10">
   @Html.DisplayFor(model => model.Comment)
 </dd>
-
+<dt class="col-sm-2">
+  @Html.DisplayNameFor(model => model.BorrowingDate)
+</dt>
+<dd class="col-sm-10">
+  @Html.DisplayFor(model => model.BorrowingDate)
+</dd>
+<dt class="col-sm-2">
+  @Html.DisplayNameFor(model => model.ReturnDate)
+</dt>
+<dd class="col-sm-10">
+  @Html.DisplayFor(model => model.ReturnDate)
+</dd>
+<dt class="col-sm-2">
+  @Html.DisplayNameFor(model => model.Borrower)
+</dt>
+<dd class="col-sm-10">
+  @Html.DisplayFor(model => model.Borrower.Address)
+</dd>
+<dt class="col-sm-2">
+  @Html.DisplayNameFor(model => model.BorrowerId)
+</dt>
+<dd class="col-sm-10">
+  @Html.DisplayFor(model => model.BorrowerId)
+</dd>
 <!-- vim:sw=2:ts=2:et:fileformat=dos
 -->
