--- a/Pages/Article/_FormPartialView.cshtml
+++ b/Pages/Article/_FormPartialView.cshtml
@@ -18,13 +18,9 @@
 </div>
 <div class="form-group form-check">
   <label class="form-check-label">
-    <input class="form-check-input" asp-for="IsLost" /> @Html.DisplayNameFor(model => model.IsLost)
+    <input class="form-check-input" asp-for="IsLost" />
+    @Html.DisplayNameFor(model => model.IsLost)
   </label>
-</div>
-<div class="form-group">
-  <label asp-for="CountBorrowing" class="control-label"></label>
-  <input asp-for="CountBorrowing" class="form-control" />
-  <span asp-validation-for="CountBorrowing" class="text-danger"></span>
 </div>
 <div class="form-group">
   <label asp-for="Comment" class="control-label"></label>
@@ -40,6 +36,11 @@
   <label asp-for="ReturnDate" class="control-label"></label>
   <input type="date" asp-for="ReturnDate" class="form-control" />
   <span asp-validation-for="ReturnDate" class="text-danger"></span>
+</div>
+<div class="form-group">
+  <label asp-for="BorrowerId" class="control-label"></label>
+  <select asp-for="BorrowerId" class ="form-control"
+    asp-items="ViewBag.BorrowerId"></select>
 </div>
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
