Functionality "Faire la location de films aux personnes" DONE !!!!

--- a/Pages/Customer/_DetailsPartialView.cshtml
+++ b/Pages/Customer/_DetailsPartialView.cshtml
@@ -53,7 +53,7 @@
   {
   <tr>
     <td>
-      @Html.DisplayFor(modelItem => item.Barcode)
+      @Html.DisplayFor(modelItem => item.Id)
     </td>
     <td>
       @Html.DisplayFor(modelItem => item.BorrowingDate)
