--- a/Pages/Article/_FormPartialView.cshtml
+++ b/Pages/Article/_FormPartialView.cshtml
@@ -2,11 +2,6 @@
 @model Article
 
 <div class="form-group">
-  <label asp-for="Barcode" class="control-label"></label>
-  <input asp-for="Barcode" class="form-control" />
-  <span asp-validation-for="Barcode" class="text-danger"></span>
-</div>
-<div class="form-group">
   <label asp-for="Disc" class="control-label"></label>
   <select asp-for="Disc" class="form-control"></select>
   <span asp-validation-for="Disc" class="text-danger"></span>
@@ -40,7 +35,11 @@
 <div class="form-group">
   <label asp-for="BorrowerId" class="control-label"></label>
   <select asp-for="BorrowerId" class ="form-control"
-    asp-items="ViewBag.BorrowerId"></select>
+    asp-items="ViewBag.BorrowerId">
+    <option value="" class="selectTagHelperFirstEmptyLine">
+      Please select one
+    </option>
+  </select>
 </div>
 
 <!-- vim:sw=2:ts=2:et:fileformat=dos
