--- a/Pages/Article/Create.cshtml
+++ b/Pages/Article/Create.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Videotheque.Pages.ArticlePage.CRUD
+@model Videotheque.Pages.ArticlePage.Crud
 
 @{
   Layout = "../Layout/_CreateOrEdit.cshtml";
