--- a/Pages/Article/Delete.cshtml
+++ b/Pages/Article/Delete.cshtml
@@ -1,5 +1,5 @@
 @page "{id:int?}"
-@model Videotheque.Pages.ArticlePage.CRUD
+@model Videotheque.Pages.ArticlePage.Crud
 
 @{
   Layout = "../Layout/_Delete.cshtml";
