--- a/Pages/Customer/Details.cshtml
+++ b/Pages/Customer/Details.cshtml
@@ -1,5 +1,5 @@
 @page "{id:int?}"
-@model Videotheque.Pages.CustomerPage.CRUD
+@model Videotheque.Pages.CustomerPage.Crud
 
 @{
   Layout = "../Layout/_Details.cshtml";
