--- a/Pages/Customer/Create.cshtml
+++ b/Pages/Customer/Create.cshtml
@@ -1,5 +1,5 @@
 @page
-@model Videotheque.Pages.CustomerPage.CRUD
+@model Videotheque.Pages.CustomerPage.Crud
 
 @{
   Layout = "../Layout/_CreateOrEdit.cshtml";
