--- a/wwwroot/styles/styles.css
+++ b/wwwroot/styles/styles.css
@@ -4,5 +4,15 @@
   padding-bottom: 0.2em;
 }
 
+#CustomerEditArticlesCurrentlyBorrowed {
+  background-image: linear-gradient(45deg,
+    rgba(153,218,255,1) 0%,
+    rgba(0,128,128,1) 95%);
+}
+
+select[name='articleLoanDuration'] {
+  display: inline-block;
+}
+
 /* vim:sw=2:ts=2:et:fileformat=dos
  */
